# 925SLOW

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.db  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
925AISLOW/: system_prompt.md
925heart/: Untitled-1.txt  patch 1.md  regenerated prompt 1.md
925heart/training/: CRM-Derived_Quote_Training_Data.csv  Codex_Instruction_to_Diff_Data.csv  Legacy_Quote_Rewrite_Samples.csv  Spec_Grading_Samples.csv  Synthetic_Quoting_Prompts.csv  crm_quote_training_data.jsonl  quote_rewrite_training_data.jsonl
925heart/training/925stackai_llm_training_data/: codex_instruction_diff_data.jsonl  quote_training_data.jsonl  spec_grading_quote_outputs.jsonl
backend/: __init__.py  cli.py  cli_runner.py  quote_pricing.py
backend/agents/: __init__.py  base_agent.py  customer_agent.py  job_agent.py  memory_agent.py  quote_agent.py  router_agent.py
backend/api/: __init__.py  root.py  test_root.py
backend/core/: __init__.py  llm_provider.py  prompt_manager.py  spec_guard.py  vector_handler.py
backend/database/: __init__.py
backend/integrations/: __init__.py  stripe_service.py
backend/utils/: logger.py
docker/: Dockerfile  docker-compose.yml
specs/: quote_generation.md
tests/: test_cli_runner.py  test_customer_agent.py  test_health.py  test_job_agent.py  test_job_invoice.py  test_llm_provider.py  test_memory_agent.py  test_memory_injection.py  test_quote_basic.py  test_quote_persistence.py  test_quote_pricing.py  test_specguard.py
