[tool.poetry]
name = "925stackai"
version = "0.1.0"
description = "9251"
authors = ["Your Name <gerryvarone95@emailgmail.com>"]

packages = [
  { include = "backend" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
click = "^8.1.7"
httpx = "^0.27.0"
SQLAlchemy = "^2.0.30"
python-slugify = "^8.0.4"  # tiny helper for DB path default
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

